<resources>
    <string name="app_name">Weather App</string>
    <string name="advanced_details">Advanced Details</string>
    <string name="temperature">Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="switch_to_advanced_view">Advanced View</string>
    <string name="weather">Weather</string>
    <string name="back">Switch back to normal view</string>
    <string name="placeholder">Placeholder</string>
    <string name="city_name">City name</string>
    <string name="date">Date</string>
    <string name="refresh">Refresh</string>
</resources>