<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/City"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/city_name"
        android:gravity="center"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City" />

    <TextView
        android:id="@+id/Temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/temperature"
        android:gravity="center"
        android:textSize="64sp"
        android:textStyle="bold"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <TextView
        android:id="@+id/Weather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/weather"
        android:gravity="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/light_font"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Temperature" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Weather"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/advancedView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundbutton"
        android:onClick="openAdvancedDetails"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/switch_to_advanced_view"
        android:textColor="@color/text_shadow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/grey_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Refresh"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Refresh"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundbutton"
        android:onClick="fetchWeatherData"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/refresh"
        android:textColor="@color/text_shadow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/grey_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/advancedView" />

</androidx.constraintlayout.widget.ConstraintLayout>